# SistemaBancario

./: .gitattributes  .gitignore  README.md  Regex.cpp  script.sh
.github/workflows/: run-on-tag.yml
Diagramas/: Banco.mdj  Bancov1.1.mdj  FluxoGrama.mdj  PlanodoProjeto.docx
Diagramas/Caso de uso/: Banco.mdj  Bancov1.1.mdj
Diagramas/Comunicação/: diagramas de comunicação.mdj
Diagramas/Sequência/: Diag. Sequencias.mdj
Projeto/: .gitignore  Assets.qrc  CMakeLists.txt  ConexaoBD.cpp  ConexaoBD.h  cadastro.cpp  cadastro.h  cadastro.ui  confirmarsenha.cpp  confirmarsenha.h  confirmarsenha.ui  conta.cpp  conta.h  db_Projeto.db  encerrarconta.cpp  encerrarconta.h  encerrarconta.ui  esqueceusenha.cpp  esqueceusenha.h  esqueceusenha.ui  fazerdeposito.cpp  fazerdeposito.h  fazerdeposito.ui  fazersaque.cpp  fazersaque.h  fazersaque.ui  fazertransferencia.cpp  fazertransferencia.h  fazertransferencia.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuprincipal.cpp  menuprincipal.h  menuprincipal.ui  solicitarcredito.cpp  solicitarcredito.h  solicitarcredito.ui  verextrato.cpp  verextrato.h  (+7 more)
Teste/: CMakeLists.txt  mainwindow.ui
Teste2/: mainwindow.ui
Teste3/: mainwindow.ui
Teste5/: mainwindow.ui
TesteDeNovo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuprincipal.cpp  menuprincipal.h
TesteYago/: CMakeLists.txt  mainwindow.ui
